Integration test added